--- a/public/index.html
+++ b/public/index.html
@@ -5,36 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web - FrostBlack</title>
-    <link rel="stylesheet" href="/public/css/style1.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <div class="card">
         <p class="title-card">@webfrostblack</p>
         <p class="text-card">A passionate frontend developer from France</p>
         <div class="links-icon">
-                <a href="https://github.com/webFrostBlack" target="_blank"><img src="/public/img/github-mark-white.svg" class="git-logo" alt="git logo"></a>
-                <a href="#" onclick="copyDiscordHandle()"><img class="discord-logo" src="/public/img/discord-icon-svgrepo-com.svg" alt="discord logo"></a>
+                <a href="https://github.com/webFrostBlack" target="_blank"><img src="/github-mark-white.svg" class="git-logo" alt="git logo"></a>
+                <a href="#" onclick="copyDiscordHandle()"><img class="discord-logo" src="discord-icon-svgrepo-com.svg" alt="discord logo"></a>
         </div>
         <p class="p-1">My Best Project : </p>
         <button onclick="redirectToUrlPath()" class="btn1">
-            <img src="/public/img/python-logo.png" alt="" class="img-btn1">
+            <img src="python-logo.png" alt="" class="img-btn1">
             <span>
                 Url Path
             </span>
         </button>
         <button onclick="redirectToTranslate()" class="btn2">
-            <img src="/public/img/javascript-logo.png" alt="" class="img-btn2">
+            <img src="javascript-logo.png" alt="" class="img-btn2">
             <span>
                 Language Translator
             </span>
         </button>
         <p class="p-2">My Language & Other : </p>
-        <a href="https://developer.mozilla.org/fr/docs/Web/HTML" target="_blank"><img class="logo-img1" src="/public/img/html5-logo.png" alt=""></a>
-        <a href="https://developer.mozilla.org/fr/docs/Web/CSS" target="_blank"><img class="logo-img2" src="/public/img/CSS3_logo.png" alt=""></a>
-        <a href="https://developer.mozilla.org/fr/docs/Web/JavaScript" target="_blank"><img class="logo-img3" src="/public/img/javascript-logo.png" alt=""></a>
-        <a href="https://www.python.org" target="_blank"><img class="logo-img4" src="/public/img/python-logo.png" alt=""></a>
-        <a href="https://nodejs.org/en" target="_blank"><img class="logo-img5" src="/public/img/node-js-logo.png" alt=""></a>
-        <a href="https://code.visualstudio.com" target="_blank"><img class="logo-img6" src="/public/img/vsc-logo.png" alt=""></a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/HTML" target="_blank"><img class="logo-img1" src="html5-logo.png" alt=""></a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/CSS" target="_blank"><img class="logo-img2" src="CSS3_logo.png" alt=""></a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/JavaScript" target="_blank"><img class="logo-img3" src="javascript-logo.png" alt=""></a>
+        <a href="https://www.python.org" target="_blank"><img class="logo-img4" src="python-logo.png" alt=""></a>
+        <a href="https://nodejs.org/en" target="_blank"><img class="logo-img5" src="node-js-logo.png" alt=""></a>
+        <a href="https://code.visualstudio.com" target="_blank"><img class="logo-img6" src="vsc-logo.png" alt=""></a>
         <p class="p-3">My Skills : </p>
         <p><img src="https://github-readme-stats.vercel.app/api/top-langs?username=webfrostblack&show_icons=true&locale=fr&layout=compact&theme=transparent&title_color=fff&text_color=c2c2c2" alt="webfrostblack" /></p>
     </div>
